[gd_scene load_steps=4 format=2]

[ext_resource path="res://SISTEMA/HABILIDADES/HABILIDAD.tscn" type="PackedScene" id=1]
[ext_resource path="res://SISTEMA/HABILIDADES/Habilidad_recoger_objetos(jugador).gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 15 )

[node name="Habilidad_recoger_objetos(jugador)" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AreaDetectorObjetos" type="Area2D" parent="." index="0"]
collision_layer = 0
collision_mask = 4
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectorObjetos" index="0"]
visible = false
modulate = Color( 0.00784314, 0, 1, 1 )
shape = SubResource( 1 )

[connection signal="area_entered" from="AreaDetectorObjetos" to="." method="_on_AreaDetectorObjetos_area_entered"]
[connection signal="body_entered" from="AreaDetectorObjetos" to="." method="_on_AreaDetectorObjetos_body_entered"]
